# SiteSavant

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
app/: main.py
config/: logging_config.py  parameters.yml
scripts/: visualize_scraped_content.py
services/: chatbot_interactor.py  creating_embeddings.py  deduplicate_embeddings.py  embedding_stuff.py  embeddings_creator.py  embeddings_deduplicator.py  embeddings_indexer.py  indexing_embeddings.py  query_handler.py  querying_embeddings.py  respectful_scraper.py  website_scraper.py
sitesavant/: respectful_scraper.py
tests/: test_chatbot_interactor.py  test_embeddings_creator.py  test_embeddings_deduplicator.py  test_embeddings_indexer.py  test_query_handler.py  test_scrapper.py  test_website_scraper.py
utils/: utils.py
